Laying groundwork for state store and updating list items in the state store on click - NOT WORKING

--- a/habit-tracker-frontend/package.json
+++ b/habit-tracker-frontend/package.json
@@ -27,6 +27,9 @@
     "@capacitor/keyboard": "5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
+    "@ngxs/devtools-plugin": "^3.8.1",
+    "@ngxs/store": "^3.8.1",
+    "@types/lodash": "^4.14.195",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
