--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,8 @@ jobs:
           node-version: '18.12.1'
       - name: Run npm install
         run: npm i
+      - name: Install Ionic CLI
+        run: npm install -g ionic/cli@7.1.1
       - name: Build Application
         run: ionic build --prod
   test:
