--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,20 +18,20 @@ jobs:
         run: npm install -g @ionic/cli
       - name: Build Application
         run: ionic build --prod
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.12.1'
-      - name: Run npm install
-        run: npm i
-      - name: Run tests
-        run: npm run test
+  # test:
+  #   name: Test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out repository code
+  #       uses: actions/checkout@v3
+  #     - name: Setup Node
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '18.12.1'
+  #     - name: Run npm install
+  #       run: npm i
+  #     - name: Run tests
+  #       run: npm run test
   lint:
     name: Lint
     runs-on: ubuntu-latest
