--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,10 +13,8 @@ jobs:
           node-version: "18.12.1"
       - name: Run npm install
         run: npm i
-      - name: Install Ionic CLI
-        run: npm install -g @ionic/cli
       - name: Build Application
-        run: ionic build --prod
+        run: npm run build-prod
   # test:
   #   name: Test
   #   runs-on: ubuntu-latest
