--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "start": "ionic serve",
+    "build": "ionic build",
+    "build-prod": "ionic build --prod",
+    "watch": "ionic build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
     "style": "prettier . --write",
