--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.0.4",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@ionic/cli": "^7.1.3",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
@@ -74,5 +75,5 @@
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   },
-  "description": "An Ionic project"
+  "description": "Ionic Angular habit-tracker-app"
 }
