--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ionic build",
     "build-prod": "ionic build --prod",
     "watch": "ionic build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=false",
+    "test-watch": "ng test",
     "lint": "ng lint",
     "style": "prettier . --write",
     "style-check": "prettier . --check"
