--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,7 +1,7 @@
 name: habit-tracker-app
 on: [push]
 jobs:
-  build + test:
+  build_and_test:
     name: Build
     runs-on: ubuntu-latest
     steps:
