--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,7 +2,7 @@ name: habit-tracker-app
 on: [push]
 jobs:
   build_and_test:
-    name: Build
+    name: Build + Test
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
